logo box dropdown index.html

--- a/index.html
+++ b/index.html
@@ -3,29 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Article Box City</title>
+  <title>Dropdown Article Site</title>
   <style>
     body {
       font-family: sans-serif;
       margin: 0;
       background-color: #f4f4f4;
     }
+
     nav {
       background: #222;
       color: white;
-      padding: 1rem;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       position: sticky;
       top: 0;
       z-index: 100;
     }
-    nav a {
-      color: white;
-      margin-right: 1rem;
-      text-decoration: none;
+
+    .logo {
+      height: 40px;
+      width: 40px;
     }
+
+    .menu {
+      position: relative;
+      display: inline-block;
+    }
+
+    .menu-button {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      padding: 0.5rem 1rem;
+    }
+
+    .dropdown {
+      display: none;
+      position: absolute;
+      background-color: #333;
+      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+      z-index: 1;
+      right: 0;
+    }
+
+    .dropdown a {
+      color: white;
+      padding: 0.5rem 1rem;
+      text-decoration: none;
+      display: block;
+    }
+
+    .dropdown a:hover {
+      background-color: #444;
+    }
+
+    .menu:hover .dropdown {
+      display: block;
+    }
+
     .container {
       padding: 2rem;
     }
+
     .article {
       background: white;
       padding: 1rem;
@@ -34,6 +78,7 @@
       border-radius: 6px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
+
     .article h2 {
       margin-top: 0;
     }
@@ -41,62 +86,37 @@
 </head>
 <body>
   <nav>
-    <strong>Jump to:</strong>
-    <a href="#article1">Article 1</a>
-    <a href="#article2">Article 2</a>
-    <a href="#article3">Article 3</a>
-    <a href="#article4">Article 4</a>
-    <a href="#article5">Article 5</a>
-    <a href="#article6">Article 6</a>
-    <a href="#article7">Article 7</a>
-    <a href="#article8">Article 8</a>
-    <a href="#article9">Article 9</a>
-    <a href="#article10">Article 10</a>
+    <img src="logo.png" alt="Logo" class="logo" />
+
+    <div class="menu">
+      <button class="menu-button">ARTICLES ⌄</button>
+      <div class="dropdown">
+        <a href="#article1">Article 1</a>
+        <a href="#article2">Article 2</a>
+        <a href="#article3">Article 3</a>
+        <a href="#article4">Article 4</a>
+        <a href="#article5">Article 5</a>
+        <a href="#article6">Article 6</a>
+        <a href="#article7">Article 7</a>
+        <a href="#article8">Article 8</a>
+        <a href="#article9">Article 9</a>
+        <a href="#article10">Article 10</a>
+      </div>
+    </div>
   </nav>
 
   <div class="container">
-    <!-- Ten article boxes -->
-    <!-- Copy-paste is a dev tradition. Don't fight it. -->
-    <div class="article" id="article1">
-      <h2>Article 1</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-    <div class="article" id="article2">
-      <h2>Article 2</h2>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-    </div>
-    <div class="article" id="article3">
-      <h2>Article 3</h2>
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-    </div>
-    <div class="article" id="article4">
-      <h2>Article 4</h2>
-      <p>Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.</p>
-    </div>
-    <div class="article" id="article5">
-      <h2>Article 5</h2>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-    <div class="article" id="article6">
-      <h2>Article 6</h2>
-      <p>Maecenas faucibus mollis interdum. Aenean lacinia bibendum.</p>
-    </div>
-    <div class="article" id="article7">
-      <h2>Article 7</h2>
-      <p>Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis.</p>
-    </div>
-    <div class="article" id="article8">
-      <h2>Article 8</h2>
-      <p>Donec id elit non mi porta gravida at eget metus.</p>
-    </div>
-    <div class="article" id="article9">
-      <h2>Article 9</h2>
-      <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-    </div>
-    <div class="article" id="article10">
-      <h2>Article 10</h2>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
+    <!-- Your 10 glorious articles -->
+    <div class="article" id="article1"><h2>Article 1</h2><p>Lorem ipsum dolor sit amet.</p></div>
+    <div class="article" id="article2"><h2>Article 2</h2><p>Ut enim ad minim veniam.</p></div>
+    <div class="article" id="article3"><h2>Article 3</h2><p>Duis aute irure dolor.</p></div>
+    <div class="article" id="article4"><h2>Article 4</h2><p>Cillum dolore eu fugiat nulla pariatur.</p></div>
+    <div class="article" id="article5"><h2>Article 5</h2><p>Sunt in culpa qui officia deserunt.</p></div>
+    <div class="article" id="article6"><h2>Article 6</h2><p>Maecenas faucibus mollis interdum.</p></div>
+    <div class="article" id="article7"><h2>Article 7</h2><p>Curabitur blandit tempus porttitor.</p></div>
+    <div class="article" id="article8"><h2>Article 8</h2><p>Donec id elit non mi porta.</p></div>
+    <div class="article" id="article9"><h2>Article 9</h2><p>Morbi leo risus, porta ac consectetur.</p></div>
+    <div class="article" id="article10"><h2>Article 10</h2><p>Praesent commodo cursus magna.</p></div>
   </div>
 </body>
 </html>
