--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dropdown Article Site</title>
+  <title>Majuscule</title>
   <style>
     body {
       font-family: sans-serif;
@@ -24,8 +24,8 @@
     }
 
     .logo {
-      height: 40px;
-      width: 40px;
+      height: 120px;
+      width: 120px;
     }
 
     .menu {
@@ -71,6 +71,8 @@
     }
 
     .article {
+      padding-top: 1rem;
+      scroll-margin-top: 200px; /* <- magic line */
       background: white;
       padding: 1rem;
       margin-bottom: 2rem;
